Fixed bug where About header wrapped to next line

--- a/WakefieldRx/mystyle.css
+++ b/WakefieldRx/mystyle.css
@@ -68,11 +68,15 @@ html, body {
 
 #aboutHeader{
 	position:absolute;
+	width:600px;
+	min-width:400px;
+	overflow:hidden;
+	height:200px;
 	top:270px;
-	left:215px;
+	left:18%;
 	z-index:13;
 	font-family: "Titillium Text 22L";
-	font-size:40px;
+	font-size:35px;
 }
 #aboutText{
 	position:absolute;
@@ -81,7 +85,7 @@ html, body {
 	overflow: hidden;
 	height:600px;
 	top:360px;
-	left:215px;
+	left:18%;
 	z-index:14;
 	font-family: "Titillium Text 22L";
 	font-size:16px;
